--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obj-memory-cache",
-  "version": "0.1.3",
-  "description": "A simple in memory cache that can watch files, or expire at a set time",
+  "version": "0.1.4",
+  "description": "A simple in memory cache that can watch files, or expire at a set time.",
   "license": "MIT",
   "author": "AspieSoft",
   "repository": {
