--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "obj-memory-cache",
-  "version": "0.2.1",
+  "name": "@aspiesoft/obj-memory-cache",
+  "version": "0.2.2",
   "description": "A simple in memory cache that can watch files, or expire at a set time.",
   "license": "MIT",
   "author": "AspieSoft",
@@ -18,10 +18,13 @@
     "object",
     "nodejs"
   ],
-  "optionalPeerDependencies": {
+  "optionalDependencies": {
     "chokidar": "^3.3.1"
   },
   "dependencies": {
     "lzutf8": "^0.5.5"
+  },
+  "devDependencies": {
+    "miniforge-js": "^0.2.5"
   }
 }
